# jsrs_derive

./: Cargo.toml
src/: lib.rs  main.rs  object_derive.rs
