[package]
name = "jsrs_derive"
version = "0.0.0"
authors = ["ShaneEverittM <shane.everitt.murphy@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["extra-traits", "full", "parsing", "derive"] }

