[package]
name = "jsrs_derive"
version = "0.1.0"
authors = ["ShaneEverittM <shane.everitt.murphy@gmail.com>"]
description = "Auxiliary crate for jsrs"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = "1.0"

